--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
       </div>
     </section>
 
+    <div id="loadingIndicator" class="loading-indicator">
+      <div class="spinner"></div>
+      <p>Generating Summary...</p>
+    </div>
+
     <section id="summaryOutput" class="summary-output"></section>
+
+    <script type="module" src="script.js"></script>
   </body>
 </html>
